objects/ssot__BenefitSchedule__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitId__c</fullName>
        <label>Benefit</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DefaultBenefitQuantity__c</fullName>
        <label>Default Benefit Quantity</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FirstSessionEndDateTime__c</fullName>
        <label>First Session End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FirstSessionStartDateTime__c</fullName>
        <label>First Session Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Benefit Schedule Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumParticipantCount__c</fullName>
        <label>Maximum Participant Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726576198_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitSchedule_BenefitId_map_Progra_rel</label>
        <referenceTo>ssot__ProgramBenefit__dlm</referenceTo>
        <relationshipLabel>BenefitSchedule_BenefitId_map_Progra_rel</relationshipLabel>
        <relationshipName>rel_1716726576198_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>